creating documentation for 4 services
