# authService/docs/swagger.json
@@ -20,17 +20,17 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "this route allows you to login in the dobet server",
+                "description": "this route allows you to login in the dobet",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Login in the system",
+                "summary": "Login in the DoBet",
                 "parameters": [
                     {
-                        "description": "credentials",
+                        "description": "give your login credencials",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -41,15 +41,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "tokens",
+                        "description": "This document contain your tokens",
                         "schema": {
                             "$ref": "#/definitions/controller.LoginSucess"
                         }
                     },
                     "500": {
-                        "description": "error",
+                        "description": "this document contain the error occured",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controller.LoginError"
                         }
                     }
                 }
@@ -57,18 +57,18 @@
         },
         "/logout": {
             "post": {
-                "description": "this route allows you to LogOut in the dobet server",
+                "description": "this route allows you to Logout in the dobet",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "LogOut in the system",
+                "summary": "Logout in the system",
                 "parameters": [
                     {
-                        "description": "credentials",
-                        "name": "user",
+                        "description": "give your login credentials",
+                        "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -78,21 +78,62 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "credentials",
+                        "description": "this document contain your login credentials",
+                        "schema": {
+                            "$ref": "#/definitions/domain.LogoutDetails"
+                        }
+                    },
+                    "400": {
+                        "description": "this document contain the error occured",
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginError"
+                        }
+                    },
+                    "500": {
+                        "description": "this document contain the error occured",
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginError"
+                        }
+                    }
+                }
+            }
+        },
+        "/refresh": {
+            "post": {
+                "description": "this route allows you to request new tokens if your token ispirex",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get you refresh tokens",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "give your expired token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "this document contain your login credentials",
                         "schema": {
                             "$ref": "#/definitions/controller.LoginSucess"
                         }
                     },
-                    "400": {
-                        "description": "error",
+                    "401": {
+                        "description": "this document contain the error occured",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controller.LoginError"
                         }
                     },
                     "500": {
-                        "description": "error",
+                        "description": "this document contain the error occured",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controller.LoginError"
                         }
                     }
                 }
@@ -100,6 +141,14 @@
         }
     },
     "definitions": {
+        "controller.LoginError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.LoginSucess": {
             "type": "object",
             "properties": {
